<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CDKeyActivity" >

    <!-- progress -->

    <LinearLayout
        android:id="@+id/loadingContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/loading"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:typeface="sans" />
    </LinearLayout>

    <!-- form -->

    <LinearLayout
        android:id="@+id/enterKeyForm"
        style="@style/FormContainer"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_cd_key"
            android:imeActionId="@+id/active"
            android:imeActionLabel="@string/action_active"
            android:imeOptions="actionUnspecified"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/activeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/action_active" />
    </LinearLayout>

</merge>