<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.anvy.projects.dssviewer.view.RotatedFrameLayout
        android:id="@+id/horizontalListViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:rotation="rotation_90" >

        <ListView
            android:id="@+id/horizontalListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top"
            android:textColor="@android:color/black" />
    </com.anvy.projects.dssviewer.view.RotatedFrameLayout>

    <FrameLayout
        android:id="@+id/rotaionSettingsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
    </FrameLayout>

    <RelativeLayout        android:id="@+id/imgPreviewContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/imgPreview"
            android:layout_alignParentTop="true" >

            <ImageView
                android:id="@+id/imgPreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

        <Button
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/apply"
            android:textSize="@dimen/font_default" />

        <Button
            android:id="@+id/buttonRotationSettings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/device_access_screen_rotation" />
    </RelativeLayout>

    <Button
        android:id="@+id/storageSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_cloud_storage"
        android:textSize="@dimen/font_default" />

    <ListView
        android:id="@+id/listAds"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:choiceMode="singleChoice" />

</RelativeLayout>